# usaddress-scourgify

./: .coveragerc  .gitignore  .isort.cfg  CHANGELOG.rst  LICENSE  README.md  README.rst  setup.cfg  tox.ini
requirements/: base.txt  dev.txt
scourgify/: __init__.py  address_constants.py  cleaning.py  exceptions.py  normalize.py  validations.py
scourgify/tests/: test_address_normalization.py  test_cleaning.py
scourgify/tests/config/: address_constants.yaml
