[metadata]
name=usaddress-scourgify
version=0.1.9
description=Clean US addresses following USPS pub 28 and RESO guidelines
author=Fable Turas
author_email=fable@rainsoftware.tech
maintainer=GreenBuildingRegistry
maintainer_email=admin@greenbuildingregistry.com
keywords= usaddress, normalization, address
url=https://github.com/GreenBuildingRegistry/usaddress-scourgify
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
python_requires='>=3.5'
[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	geocoder>=1.22.6
	usaddress>=0.5.9
	frozendict>=1.2
	yaml-config>=0.1.2
	typing>=3.6.1
[bdist_wheel]
python-tag = py3
